# OZ

./: .clang-tidy  .cppcheckrc  .gitignore  .pvsconfig  .travis.yml  CMakeLists.txt  LICENSE.md  OpenMAMA-zmq.sln  OpenMAMA-zmq.vcxproj  README.md  SConstruct  build.sh  clangtidy.csv  clangtidy.sh  cppcheck.sh  pvs.csv  pvs.sh
admin/: build_project.sh  dependencies  devenv.buildmaster.sh  devenv.common.sh  devenv.sh  install_shared.sh
config/: mama.properties
doc/: Bibliography.md  Changes.md  Configuration.md  Getting-Started.md  Naming-Service.md  Performance.md  Pub-Sub.md  README.md  Readme.md  Reconnects-Heartbeats.md  Running-Examples.md  Socket-Monitor.md  Wire-Formats.md  biblio.md  changes.md  config.md  diffs.md  get-start.md  getstart.md  nsd.md  overview.md  pol.pl.md  pub-sub.md  pubsub.md  req-rep.md  reqreply.md  wire-format.md
examples/: .gdbinit  CMakeLists.txt  Doxyfile  Readme.md  leak.cpp  ozimpl.cpp  ozimpl.graffle  ozimpl.h  ozimpl.md  pub.cpp  rep.cpp  req.cpp  req2.cpp  sub.cpp  timer.cpp  timer2.cpp  uaf.cpp  vg.sh  vg.supp  wc.cpp  wc2.cpp
scripts/: CMakeLists.txt  pol.pl
src/: CMakeLists.txt  SConscript  bridge.c  hammer.c  inbox.c  inbox.h  io.c  io.h  msg.c  msg.h  nail.c  notimpl.c  nsd.c  params.c  params.h  publisher.c  queue.c  queue.h  queuebench.c  subscription.c  subscription.h  timer.c  transport.c  transport.h  uqueue.c  uqueue.h  util.c  util.h  zmqbridgefunctions.h  zmqdefs.h
test/: .gdbinit  build-all.sh  build-me.sh  consumer.sh  install-deps.sh  mama.properties  nsd.sh  omnmmsg.sh  oz-nsd.sh  oz-pubsub.sh  oz.sh  producer.sh  pub.sh  qpid-broker.sh  qpid-pubsub.sh  qpid.sh  qpidmsg.sh  setenv.sh  start-nsd.sh  stop-nsd.sh  sub.sh  ut.sh
